[tool.poetry]
name = "sanic_sse"
version = "0.3.1"
description = "Sanic Server-Sent Events extension"
authors = ["Innokenty Lebedev"]
repository = "https://github.com/inn0kenty/sanic_sse"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = "^3.5"
sanic = "*"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-random-order = "^1.0.4"
pytest-asyncio = "^0.14.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
